# Image-Editor

./: .gitignore  CMakeLists.txt  Constants.h  main.cpp
classes/: Filter.cpp  Filter.h  FilterGS.cpp  FilterGS.h  FilterRGB.cpp  FilterRGB.h  Helper.cpp  Helper.h  View.cpp  View.h
dependency/: Reader.cpp  Reader.h  bmplib.cpp  bmplib.h
include/: Controller.h  FilterGS.h  FilterRGB.h  Helper.h  ZDriver.h
src/: Controller.cpp  FilterGS.cpp  FilterRGB.cpp  Helper.cpp  ZDriver.cpp
